src/dts/tests/nested_modules/nested_modules.exp

nested_modules.js:5:9,14: string
This type is incompatible with
[LIB] nested_modules.js:12:26,28: number

nested_modules.js:7:18,21: property y
Error:
nested_modules.js:7:9,14: string
This type is incompatible with
[LIB] nested_modules.js:3:18,23: number

Found 2 errors
